Fix small bugs and design errors
Change-Id: Iaa9d354b74dd4176689978928b84ab3b6c16579e